// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spellEffectsValues > damage and heal values 1`] = `
[
  [
    {
      "base": 50,
      "className": "ScalingValue",
      "levelValues": [
        50,
        55,
        110,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_10",
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
  [
    {
      "base": 30,
      "className": "ScalingValue",
      "levelValues": [
        30,
        33,
        66,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_10",
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > damage with effectiveness values 1`] = `
[
  [
    {
      "base": 25,
      "className": "ScalingValue",
      "levelValues": [
        25,
        27,
        55,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_10",
      "unit": {
        "kind": "FIXED",
      },
    },
    {
      "base": 40,
      "className": "ScalingValue",
      "levelValues": [
        40,
        44,
        88,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_10",
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > heal value followed by valueless movement 1`] = `
[
  [
    {
      "base": 35,
      "className": "ScalingValue",
      "levelValues": [
        35,
        38,
        77,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_10",
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
  [],
]
`;

exports[`spellEffectsValues > non-scaling value 1`] = `
[
  [
    {
      "base": 50,
      "className": "ScalingValue",
      "levelValues": [
        50,
        50,
        50,
      ],
      "scalingStrategy": "NONE",
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > only valueless movement 1`] = `
[
  [],
]
`;

exports[`spellEffectsValues > shadow percent damage 1`] = `
[
  [
    {
      "base": 35,
      "className": "ScalingValue",
      "levelValues": [
        35,
        40,
        95,
      ],
      "scalingStrategy": "DARK_SLASH",
      "unit": {
        "kind": "PERCENT",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > stat value and nested effectiveness values 1`] = `
[
  [
    {
      "base": 20,
      "className": "ScalingValue",
      "levelValues": [
        20,
        21,
        32,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_5",
      "unit": {
        "kind": "PERCENT",
      },
    },
  ],
  [
    {
      "base": 30,
      "className": "ScalingValue",
      "levelValues": [
        30,
        31,
        48,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_5",
      "unit": {
        "kind": "PERCENT",
      },
    },
    {
      "base": 0,
      "className": "ScalingValue",
      "levelValues": [
        0,
        0,
        0,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_5",
      "unit": {
        "kind": "PERCENT",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > summon values 1`] = `
[
  [
    {
      "base": 70,
      "className": "ScalingValue",
      "levelValues": [
        70,
        77,
        154,
      ],
      "scalingStrategy": "ADDITIVE_BASE_PERCENT_10",
      "unit": {
        "kind": "FIXED",
      },
    },
    {
      "base": 45,
      "className": "ScalingValue",
      "levelValues": [
        45,
        54,
        135,
      ],
      "scalingStrategy": "MINION_ATK",
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
]
`;
